--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,7 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["node_modules"]
+libs = ["node_modules", "lib"]
 remappings = [
     "@auroraisnear/=node_modules/@auroraisnear/",
     "@openzeppelin/=node_modules/@openzeppelin/",
