--- a/.github/workflows/security-analysis.yml
+++ b/.github/workflows/security-analysis.yml
@@ -10,5 +10,5 @@ on:
 jobs:
   security_analysis:
     name: Shared
-    uses: aurora-is-near/.github/.github/workflows/security_analysis.yml@feat/foundry
+    uses: aurora-is-near/.github/.github/workflows/security_analysis.yml@master
     secrets: inherit
